--- a/root/html/experiments.html
+++ b/root/html/experiments.html
@@ -14,6 +14,15 @@
     <link rel="stylesheet" href="https://use.typekit.net/osf7jzq.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <script src="../scripts/home.js"></script>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-31QNDERZ67"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-31QNDERZ67');
+</script>
 </head>
 
 <body>
