--- a/root/html/experiments.html
+++ b/root/html/experiments.html
@@ -347,15 +347,15 @@
 
     <div id="footer">
         <span title="Navigate to Behance">
-        <a class="bottom" href="https://www.behance.net/davinawooley" target="_blank" onmouseover="this.bgColor='white'; this.style.color='#a1a1a1'" onmouseout="this.bgColor='#a1a1a1'; this.style.color='rgb(74, 74, 74)'"">Behance</a>
-       </span>
-        <div id="hyphen">|</div>
-        <span title="Navigate to LinkedIn">
-        <a class="bottom" href="https://www.linkedin.com/in/davinawooley/" target="_blank" onmouseover="this.bgColor='white'; this.style.color='#a1a1a1'" onmouseout="this.bgColor='#a1a1a1'; this.style.color='rgb(74, 74, 74)'">LinkedIn</a></span>
-        <div id="hyphen">|</div>
-        <span title="Navigate to GitHub">
-        <a class="bottom" href="https://github.com/davinawooley" target="_blank" onmouseover="this.bgColor='white'; this.style.color='#a1a1a1'" onmouseout="this.bgColor='#a1a1a1'; this.style.color='rgb(74, 74, 74)'">GitHub</a></span>
-        <h6> © 2022 Davina Wooley.</h6>
+            <a class="bottom" href="https://www.behance.net/davinawooley" target="_blank" onmouseover="this.bgColor='white'; this.style.color='#a1a1a1'" onmouseout="this.bgColor='#a1a1a1'; this.style.color='rgb(74, 74, 74)'">Behance</a>
+           </span>
+            <div id="hyphen">|</div>
+            <span title="Navigate to LinkedIn">
+            <a class="bottom" href="https://www.linkedin.com/in/davinawooley/" target="_blank" onmouseover="this.bgColor='white'; this.style.color='#a1a1a1'" onmouseout="this.bgColor='#a1a1a1'; this.style.color='rgb(74, 74, 74)'">LinkedIn</a></span>
+            <div id="hyphen">|</div>
+            <span title="Navigate to GitHub">
+            <a class="bottom" href="https://github.com/davinawooley" target="_blank" onmouseover="this.bgColor='white'; this.style.color='#a1a1a1'" onmouseout="this.bgColor='#a1a1a1'; this.style.color='rgb(74, 74, 74)'">GitHub</a></span>
+            <h6> © 2022 Davina Wooley.</h6>
     </div>
 
 
