--- a/root/html/about.html
+++ b/root/html/about.html
@@ -55,7 +55,7 @@
 
     <div id="margined">
         <p id="underName"> Heyo, I'm Davina!</p>
-        <div id="shortBio">
+        <!-- <div id="shortBio"> -->
             <p id="bioBody">
                Art, Business, and Technology are my three greatest passions, and I am interested in understanding stakeholder needs to develop effective, technical, and artistic user-centered solutions. Regardless of the creative approach, digital
                 media, business problem-solving or progamming, I strive to intrigue, inform, and assist users.
