--- a/root/html/experiments.html
+++ b/root/html/experiments.html
@@ -118,42 +118,42 @@
                         <div class="item ui">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
                                 <!-- <sup>01</sup> <a href="../html/herdHikes.html">HerdHikes</a></p> -->
-                                <sup>01</sup> <a onclick="return confirm_alert(this);">HerdHikes </a></p>
+                                <sup>01</sup> <a  onclick="return confirm_alert(this);" id = "projectName">HerdHikes </a></p>
                           
                             <p class="animate__animated animate__fadeIn " id="descriptName">UI / UX  |  2021</p>
                         </div>
 
                         <div class="item software">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>02</sup> <a onclick="return confirm_alert(this);">Abloh Immersive</a></p>
+                                <sup>02</sup> <a onclick="return confirm_alert(this);" id = "projectName">Abloh Immersive</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">SOFTWARE  |  2022</p>
                         </div>
 
                         <div class="item threeD">
-                            <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>03</sup><a onclick="return confirm_alert(this);"> 2022: AR Space Odyssey</a></p>
+                            <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>03</sup><a onclick="return confirm_alert(this);" id = "projectName"> 2022: AR Space Odyssey</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">3D  |  2022</p>
                         </div>
 
 
                         <div class="item print">
-                            <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>04</sup> <a onclick="return confirm_alert(this);">Generative Typography</a></p>
+                            <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>04</sup> <a onclick="return confirm_alert(this);" id = "projectName">Generative Typography</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">GENERATIVE ART  |  2022</p>
                         </div>
 
 
                         <div class="item motion">
-                            <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>05</sup><a onclick="return confirm_alert(this);"> Kinetic Typography</a></p>
+                            <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>05</sup><a onclick="return confirm_alert(this);" id = "projectName"> Kinetic Typography</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">MOTION  |  2022</p>
                         </div>
 
 
                         <div class="item hardware">
-                            <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>06</sup><a onclick="return confirm_alert(this);"> SensOrb</a></p>
+                            <p class="animate__animated animate__fadeIn" id="titleWork"> <sup>06</sup><a onclick="return confirm_alert(this);" id = "projectName"> SensOrb</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">HARDWARE  |  2021</p>
                         </div>
                         <div class="item software">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>07</sup> <a onclick="return confirm_alert(this);">Euphonics.io</a></p>
+                                <sup>07</sup> <a onclick="return confirm_alert(this);" id = "projectName">Euphonics.io</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">SOFTWARE  |  2022</p>
                         </div>
 
@@ -162,13 +162,13 @@
                  
                         <div class="item professional">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>08</sup><a onclick="return confirm_alert(this);"> DEW Branding</a></p>
+                                <sup>08</sup><a onclick="return confirm_alert(this);" id = "projectName"> DEW Branding</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">MISC  |  2022</p>
                         </div>
 
                         <div class="item professional">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>09</sup><a onclick="return confirm_alert(this);"> Misc. Works</a></p>
+                                <sup>09</sup><a onclick="return confirm_alert(this);" id = "projectName"> Misc. Works</a></p>
                             <p class="animate__animated animate__fadeIn" id="descriptName">MISC.  |  2019-2022</p>
                         </div>
 
