--- a/root/html/about.html
+++ b/root/html/about.html
@@ -175,7 +175,13 @@
                     <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">HTML5 / CSS3</td>
                     <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">TensorFlow</td> 
                     <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">GLSL</td>
-                    <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">Db2</td> 
+                    <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">SQL</td> 
+                </tr>
+                <tr>
+                    <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">Springboot</td>
+                    <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">Rest</td> 
+                    <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">Flutter</td>
+                    <td><img src="../images/bullet_logo.png" style="height:7px" id="bullet">React</td> 
                 </tr>
 
                 <tr>
