--- a/root/html/about.html
+++ b/root/html/about.html
@@ -44,7 +44,6 @@
                         <li id="divideTab">|</li>
 
                         <li><a href="../html/experiments.html" id="menuLinks">EXPERIMENTS</a></li>
-                        <br>
                     </ul>
                 </div>
             </div>
@@ -55,7 +54,9 @@
         <!-- <img src="../images/dwool.jpeg" id="myPic"> -->
 
     <div id="margined">
+        <div id="shortBio">
         <p id="underName"> Heyo, I'm Davina!</p>
+        </div>
         <!-- <div id="shortBio"> -->
             <p id="bioBody">
                Art, Business, and Technology are my three greatest passions, and I am interested in understanding stakeholder needs to develop effective, technical, and artistic user-centered solutions. Regardless of the creative approach, digital
@@ -66,10 +67,10 @@
                 <b>Email:</b> <a href="mailto:davinawooley@gmail.com" value="Hello" id="myInput" target="_blank" onmouseover="this.bgColor='white'; this.style.color='#a1a1a1'" onmouseout="this.bgColor='#a1a1a1'; this.style.color='rgb(74, 74, 74)'"><span title="Open Default Email App">davinawooley@gmail.com</span></a>
                 <button type="button" id="btnCopy"> <span title="Copy to Clipboard"><img src="../images/copy.png" id="btnCopy" width ="11 px" ></span></button>
                 <br>
-                Phone:
-                <span title="Make Call"><a href="tel: +1 470-645-7646" onmouseover="this.bgColor='white'; this.style.color='#a1a1a1'" onmouseout="this.bgColor='#a1a1a1'; this.style.color='rgb(74, 74, 74)'">+1 (470) 645-7646</a> </span>
+                <b>Phone:</b>
+                <span title="Make Call"><a href="tel: +1 470-645-7646" onmouseover="this.bgColor='white'; this.style.color='#a1a1a1'" onmouseout="this.bgColor='#a1a1a1'; this.style.color='rgb(74, 74, 74)'">+1 (470) 645-7646</a></span>
                 <br> <b>LinkedIn:</b>
-                <a href="https://linkedin.com/in/davinawooley" target="_blank" onmouseover="this.bgColor='white'; this.style.color='#a1a1a1'" onmouseout="this.bgColor='#a1a1a1'; this.style.color='rgb(74, 74, 74)'"><span title="Navigate to LinkedIn"> My Profile</span></a>
+                <span title="Navigate to LinkedIn"><a href="https://linkedin.com/in/davinawooley" target="_blank" onmouseover="this.bgColor='white'; this.style.color='#a1a1a1'" onmouseout="this.bgColor='#a1a1a1'; this.style.color='rgb(74, 74, 74)'">My Profile</a></span>
             
                 <br><br>
 
