--- a/root/html/about.html
+++ b/root/html/about.html
@@ -64,7 +64,11 @@
                 <br><br> I am excited by the potential of XR to promote accessibility and inclusivity.
 <br><br>
 
-                <b>Email:</b> <a href="mailto:davinawooley@gmail.com" value="Hello" id="myInput" target="_blank" onmouseover="this.bgColor='white'; this.style.color='#a1a1a1'" onmouseout="this.bgColor='#a1a1a1'; this.style.color='rgb(74, 74, 74)'"><span title="Open Default Email App">davinawooley@gmail.com</span></a>
+                <b>Email:</b> 
+                
+                <span title="Open Default Email App"><a href="mailto:davinawooley@gmail.com" value="Hello" target="_blank" onmouseover="this.bgColor='white'; this.style.color='#a1a1a1'" onmouseout="this.bgColor='#a1a1a1'; this.style.color='rgb(74, 74, 74)'">davinawooley@gmail.com
+                    
+                    </a></span>
                 <button type="button" id="btnCopy"> <span title="Copy to Clipboard"><img src="../images/copy.png" id="btnCopy" width ="11 px" ></span></button>
                 <br>
                 <b>Phone:</b>
