--- a/root/html/about.html
+++ b/root/html/about.html
@@ -62,7 +62,7 @@
                Art, Business, and Technology are my three greatest passions, and I am interested in understanding stakeholder needs to develop effective, technical, and artistic user-centered solutions. Regardless of the creative approach, digital
                 media, business problem-solving or progamming, I strive to intrigue, inform, and assist users.
                 <br><br> I am excited by the potential of XR to promote accessibility and inclusivity.
-<br><br>
+<br><br>Fmed
 
                 <b>Email:</b> 
                 
