Three JS home initial functioning

--- a/root/html/wooleyMedia.html
+++ b/root/html/wooleyMedia.html
@@ -12,6 +12,15 @@
     <link rel="stylesheet" href="https://use.typekit.net/jil3vcw.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <!-- <script src="../scripts/home.js"></script>  -->
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-31QNDERZ67"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-31QNDERZ67');
+</script>
 </head>
 <!-- 
 <style> 
