--- a/root/html/experiments.html
+++ b/root/html/experiments.html
@@ -110,7 +110,7 @@
                            
                         <div class="item ui">
                             <p class="animate__animated animate__fadeIn" id="titleWork">
-                                <sup>01</sup> <a  onclick="return confirm_alert(this);" id = "projectName">HerdHikes </a></p>
+                                <sup>01</sup> <a href="herdHikes.html" id = "projectName">HerdHikes </a></p>
                           
                             <p class="animate__animated animate__fadeIn " id="descriptName">UI / UX  |  2021</p>
                         </div>
