--- a/root/html/herdHikes.html
+++ b/root/html/herdHikes.html
@@ -61,12 +61,8 @@
             <p id="bioBody">
 
                 <br>
-                Hiking is an excellent activity that presents a unique opportunity for its participants to exercise, enjoy nature, socialize, and take a mental break from the chaos of everyday life. My goal was to create a product that inspires people to hike while simplifying the logistical requirements associated with planning group trips.    <br>
-      
-                <!-- <a href="https://linkedin.com/in/davinawooley" target="_blank"><span title="Navigate to Project" 
-                    onmouseover="this.bgColor='grey'; this.style.color='grey'"
-                     onmouseout="this.bgColor='white'; this.style.color='white'"
-                      target="_blank" id="gitHubText">Repo</span></a> -->
+                Hiking is an excellent activity that presents a unique opportunity for its participants to exercise, enjoy nature, socialize, and take a mental break from the chaos of everyday life. 
+                My goal was to create a product that inspires people to hike while simplifying the logistical requirements associated with planning group trips.    <br>
                 <br>
                 <br>
             </p>
@@ -105,8 +101,8 @@
 
         <div id="shortBio">
             <p id="bioBody">
-            No applications are offering services that are created for the purpose of helping hikers choose and schedule hiking trips. This application can bring ease to hikers which can result in a greater likelihood that they will hike and use the service. The
-            goal is to minimize the users' logistical concerns, allowing them to focus on the hike more than the planning, scheduling, coordinating and communicating with others.
+            No applications are offering services that are created for the purpose of helping hikers choose and schedule hiking trips. The
+            goal is to minimize the users' logistical concerns, allowing them to focus on the hike more than the planning, scheduling, coordinating and communicatiion.
         </p>
     </div>
     </div>
@@ -155,9 +151,9 @@
 
     ● What additional activities do you like to participate in while on a hiking trip? (e.g. climbing, kayaking, biking, camping, etc.)
             <br>● How often do you hike throughout the year, and what factors motivate your decisions?
-            <br>● Approximately how many hiking trips do you schedule and cancel each year? Why?
-            <br>● What are the factors used to determine which trail you choose? (eg. location, difficulty, trail completion time, views, landmarks, etc.)
-            <br>● Do you prefer to hike in groups or alone? How do you coordinate hiking trips? What are associated hurdles? </p>
+            <br><br>● Approximately how many hiking trips do you schedule and cancel each year? Why?
+            <br><br>● What are the factors used to determine which trail you choose? (eg. location, difficulty, trail completion time, views, landmarks, etc.)
+            <br><br>● Do you prefer to hike in groups or alone? How do you coordinate hiking trips? What are associated hurdles? </p>
         
         <h1 id="sectionHead">Data-Driven Insight</h1>
 
@@ -186,13 +182,13 @@
         <h1 id="sectionHead">Design Criteria from Data</h1>
         <div id="shortBio">
         <p id="bioBody">
-            Convenience - users want to find trails that are nearby and easy to access quickly. They want to if the trail has the features and amenities that they want, trail difficulty, and level of preparedness needed so that they can find
+            <b>Convenience</b> - users want to find trails that are nearby and easy to access quickly. They want to if the trail has the features and amenities that they want, trail difficulty, and level of preparedness needed so that they can find
             an ideal path with little time and effort spent.
-            <br> <br> Seclusion - Hikers do not mind using technology in preparation of thei hike. However when on the trail; they want to be "in the moment" and "aware of their surroundings" on the trail, often wanting to use technology as little as
+            <br><br><b>Seclusion</b> - Hikers do not mind using technology in preparation of thei hike. However when on the trail; they want to be "in the moment" and "aware of their surroundings" on the trail, often wanting to use technology as little as
             possible.
-            <br> <br>Community - My interviewees strongly prefer bonding with others on hikes and sharing unique outdoor experiences. There may be friendly competition at times, but the technology needs to include a strong social component that encourages
+            <br><br><b>Community</b> - My interviewees strongly prefer bonding with others on hikes and sharing unique outdoor experiences. There may be friendly competition at times, but the technology needs to include a strong social component that encourages
             collaboration and is easily accessible for both new and experienced hikers.Encourage groups of individuals to hike.
-            <br> <br> Safety - Some users were very invested in ensuring that their chosen trail was low-risk and that in case of an emergency they can receive assistance.
+            <br><br><b>Safety</b> - Some users were very invested in ensuring that their chosen trail was low-risk and that in case of an emergency they can receive assistance.
         </p>
 </div>
     </div>
@@ -214,13 +210,12 @@
     <div id="topic">
         <h1 id="sectionHead">Idea Selection</h1>
         <div id="shortBio">
-        <p id="bioBody">Selecting a Final Design Concept
-            <br>
-            <br> To select the final design concept, I looked at the Ideas generated, and analyzed them in terms of implementation feasibility. I then studied if different ideas satisfy market and user needs that are backed by our data. Finally, which
-            concept follows our design criteria the best? Community was the most importand design criteria, as determined from the data.
+        <p id="bioBody">
+            To select the final design concept, I looked at the ideas generated, and analyzed them in terms of whether the concept meets design criteria, market and user needs "best" according to the data. Finally, which
+ <u>Community</u> was the most importand design criteria, as determined from the data.
             <br> <br> After creating the ideas I separated the ideas into main categories. I choose which categories were most relevant to our user and market needs. Green sticky noted indicate the most relevant categories, and the blue sticky notes beneath
             highlight the most relevant ideas. I thought that planning a group hiking event and finding people to join you in your hike, satisfied our design requirements and met unsatisfied needs.
-            <br> <br> Finally, the Idea for HikeHerd was born and I began determining features and ultimately prototyping concepts.
+            <br> <br> Finally, the idea for HikeHerd was born and I began outlining features inspired by findings and began prototyping concepts.
         </p>
 </div>
     </div>
@@ -255,39 +250,18 @@
     <div id="topic">
         <h1 id="sectionHead">Key Activities</h1>
         <div id="shortBio">
-        <p id="bioBody">Creating Event and adding friends
-            <br>
-            <br> Searching for hike
-            <br><br>Capabilities : Browse hiking locations and view geotagged photos posted by other users. <br><br>Blog where users can post about their hikes, critique trails, and offer helpful tips. <br>Send and receive messages .
-            <br><br> Dashboard, users can view calendar, browse hikes by location, and view trail features, optionally limiting results to events shared by contacts or public events posted to the community. The user can learn about hikes and note whether
-            they are interested. <br><br>All commitments are shared in the hikes log below. If a user selects “Going”, it will be added to the user’s calendar. <br><br>Each user will have their own profile, displaying photos, hiking qualitative metrics, and preferences.
-            Profiles can be public or private. Users can list favorite locations and obtain information regarding events in those locations, manage contacts, and follow certain users’ blog entries.
+        <p id="bioBody">● Create outing(s) and invite others
+            <br><br>●  Search for hike
+            <br><br>●  Browse hiking locations,  view trail features, read reviews and  view geotagged photos posted by other users. <br>●  Send and receive messages.
+            <br><br>●  Dashboard - users can view calendar, browse hikes by location, view posts and outings shared by the community.
+             <br><br>● Accept, Decline, Remind about potential outings. <br><br>●  If a user selects “Going”, it will be added to the user’s calendar. <br><br>● Each user will have their own profile, displaying photos and preferences.<br><br>
+            Profiles can be public or private. 
+            <br><br>● Users can list favorite locations and obtain information regarding events in those locations, manage contacts, and follow certain users’ blog entries.
             <br>
         </p>
 
     </div>
     </div>
-
-    <!-- <div id="topic">
-        <h1 id="sectionHead">Evaluation from Users</h1>
-        <div id="shortBio">
-        <p id="bioBody">I created excel sheets that would allow users to critique our prototypes using Cognitive Heuristic Techniques.<br>
-        </p>
-    </div>
-    </div> -->
-
-<!-- 
-    <div id="topic">
-        <h1 id="sectionHead">Conclusion</h1>
-        <div id="shortBio">
-        <p id="bioBody"> The majority of our subjects were able to navigate our application, however some of our design choices need to be refined to make the experience more intuitive to all users.</p>
-    </div>
-    </div> -->
-
-            <!--end of more -->
-
-<!-- back to top -->
-
 
 <style>
 
