Fix footer styling

--- a/root/html/herdHikes.html
+++ b/root/html/herdHikes.html
@@ -227,12 +227,12 @@
         <p id="bioBody">
             Group Hiking Coordinator
             <br>
-            <br>Focus on Community and Convenience : Our interviewees liked the social aspects of hiking, yet sometimes struggled with planning. This website will provide features to the user to help them plan and obtain information regarding their
+            <br><b>Focus on Community and Convenience</b> : Our interviewees liked the social aspects of hiking, yet sometimes struggled with planning. This website will provide features to the user to help them plan and obtain information regarding their
             hike in a centralized location.
 
-            <br><br>Stakeholders : The most relevant stakeholders would be enthusiastic hikers looking to hike with groups of individuals. Primarily this appeals to our John Walker persona, which includes individuals that want to plan hikes with others,
+            <br><br><b>Stakeholders</b> : The most relevant stakeholders would be enthusiastic hikers looking to hike with groups of individuals. Primarily this appeals to our John Walker persona, which includes individuals that want to plan hikes with others,
             track progress, and belong to an enthusiastic hiking-centered community. This app will likely appeal to enthusiastic hikers of ages 20-45.
-            <br><br>Tech Innovation : There are no major social media or event planning and management sites created around Hiking that we are aware of. This is a novel concept that helps bring people together around their interest in hiking.
+            <br><br><b>Tech Innovation</b> : There are no major social media or event planning and management sites created around Hiking that we are aware of. This is a novel concept that helps bring people together around their interest in hiking.
 
 </p>
 </div>
