Copy and Style Update

--- a/root/html/herdHikes.html
+++ b/root/html/herdHikes.html
@@ -61,8 +61,9 @@
             <p id="bioBody">
 
                 <br>
-                Hiking is an excellent activity that presents a unique opportunity for its participants to exercise, enjoy nature, socialize, and take a mental break from the chaos of everyday life. 
-                My goal was to create a product that inspires people to hike while simplifying the logistical requirements associated with planning group trips.    <br>
+                Hiking is an excellent activity that presents a unique opportunity for individuals to exercise, enjoy nature, socialize, and take a mental break from the chaos of everyday life. 
+                <!-- My goal was to create a product that inspires people to hike while simplifying the logistical requirements associated with planning group trips. -->
+                The goal was to create a product that decreases the users' logistical concerns, allowing them to focus on the hike more than the planning, scheduling, coordinating and communicatiion.
                 <br>
                 <br>
             </p>
@@ -101,8 +102,7 @@
 
         <div id="shortBio">
             <p id="bioBody">
-            No applications are offering services that are created for the purpose of helping hikers choose and schedule hiking trips. The
-            goal is to minimize the users' logistical concerns, allowing them to focus on the hike more than the planning, scheduling, coordinating and communicatiion.
+            No applications are offering services that are created for the purpose of helping hikers choose and schedule hiking trips. 
         </p>
     </div>
     </div>
@@ -157,8 +157,8 @@
         
         <h1 id="sectionHead">Data-Driven Insight</h1>
 
-        <p id="bioBody"> One individual interviewed has a friendly competition with a friend in a similar activity to hiking, so we could see competition being a small factor for some users. Many interviewees did not like using their phones during hikes. A few people
-            liked to track their steps and calories on the trail. Everyone liked hiking with at least a small group of friends, and all individuals interviewed stated that they like to hike because they enjoy being outdoors.
+        <p id="bioBody"> One individual interviewed has a friendly competition with a friend relating to tracking their physical activity, so we could see competition being a small factor for some users. <br><br>78% of  interviewees did not like using their phones during hikes.<br><br> A few people
+            liked to track their steps and calories on the trail.<br><br> Everyone liked hiking with at least a small group of friends, <br><br>and all individuals interviewed stated that they like to hike because they enjoy being outdoors.
         </p>
 
 
@@ -182,13 +182,10 @@
         <h1 id="sectionHead">Design Criteria from Data</h1>
         <div id="shortBio">
         <p id="bioBody">
-            <b>Convenience</b> - users want to find trails that are nearby and easy to access quickly. They want to if the trail has the features and amenities that they want, trail difficulty, and level of preparedness needed so that they can find
-            an ideal path with little time and effort spent.
-            <br><br><b>Seclusion</b> - Hikers do not mind using technology in preparation of thei hike. However when on the trail; they want to be "in the moment" and "aware of their surroundings" on the trail, often wanting to use technology as little as
-            possible.
-            <br><br><b>Community</b> - My interviewees strongly prefer bonding with others on hikes and sharing unique outdoor experiences. There may be friendly competition at times, but the technology needs to include a strong social component that encourages
-            collaboration and is easily accessible for both new and experienced hikers.Encourage groups of individuals to hike.
-            <br><br><b>Safety</b> - Some users were very invested in ensuring that their chosen trail was low-risk and that in case of an emergency they can receive assistance.
+            <b>Convenience</b> - Users want to find trails that are nearby, easily accessible, and trails that meet their requirements (difficulty, trail length, river, etc ). 
+            <br><br><b>Seclusion</b> - Hikers do not mind using technology in preparation for their hike. However, when on the trail they like to use technology minimally or ubiquitously. They want to be "in the moment" and "aware of their surroundings."
+            <br><br><b>Community</b> - Hikers strongly prefer bonding and sharing unique outdoor experiences with others. 
+            <br><br><b>Safety</b> - Some users were very invested in ensuring that their prospective trails were low-risk and that in case of an emergency they will be able to receive assistance.
         </p>
 </div>
     </div>
@@ -199,7 +196,7 @@
         <h1 id="sectionHead">Ideation</h1>
         <div id="shortBio">
         <p id="bioBody">
-            There were two 45 minute long ideation sessions that produced 110 ideas. The goal was to keep the design criteria in mind and come up with as many judgement free ideas as possible.
+            There were two 45 minute-long ideation sessions that produced 110 ideas. The objectice was to come up with as many judgement free ideas inspired by the design criteria as possible.
             <br>  <br>
             <img src="../images/sl_appndx4.png" width="60%">
             <br>
@@ -211,9 +208,9 @@
         <h1 id="sectionHead">Idea Selection</h1>
         <div id="shortBio">
         <p id="bioBody">
-            To select the final design concept, I looked at the ideas generated, and analyzed them in terms of whether the concept meets design criteria, market and user needs "best" according to the data. Finally, which
- <u>Community</u> was the most importand design criteria, as determined from the data.
-            <br> <br> After creating the ideas I separated the ideas into main categories. I choose which categories were most relevant to our user and market needs. Green sticky noted indicate the most relevant categories, and the blue sticky notes beneath
+            To select the final design concept, I looked at the ideas generated, and analyzed them in terms of whether the concept meets design criteria and what has the potential to meet market/user needs.
+            <u>Community</u> was the most importand design criteria, as determined from the data.
+            <br> <br> After creating the ideas I separated them into main categories. Green sticky notes indicate the most relevant categories, and the blue sticky notes beneath
             highlight the most relevant ideas. I thought that planning a group hiking event and finding people to join you in your hike, satisfied our design requirements and met unsatisfied needs.
             <br> <br> Finally, the idea for HikeHerd was born and I began outlining features inspired by findings and began prototyping concepts.
         </p>
@@ -225,14 +222,12 @@
         <h1 id="sectionHead">Features</h1>
         <div id="shortBio">
         <p id="bioBody">
-            Group Hiking Coordinator
-            <br>
-            <br><b>Focus on Community and Convenience</b> : Our interviewees liked the social aspects of hiking, yet sometimes struggled with planning. This website will provide features to the user to help them plan and obtain information regarding their
+          <b>Focus on Community and Convenience</b> : Our interviewees liked the social aspects of hiking, yet sometimes struggled with planning. This website will provide features to the user to help them plan and obtain information regarding their
             hike in a centralized location.
 
             <br><br><b>Stakeholders</b> : The most relevant stakeholders would be enthusiastic hikers looking to hike with groups of individuals. Primarily this appeals to our John Walker persona, which includes individuals that want to plan hikes with others,
             track progress, and belong to an enthusiastic hiking-centered community. This app will likely appeal to enthusiastic hikers of ages 20-45.
-            <br><br><b>Tech Innovation</b> : There are no major social media or event planning and management sites created around Hiking that we are aware of. This is a novel concept that helps bring people together around their interest in hiking.
+          
 
 </p>
 </div>
@@ -250,13 +245,11 @@
     <div id="topic">
         <h1 id="sectionHead">Key Activities</h1>
         <div id="shortBio">
-        <p id="bioBody">● Create outing(s) and invite others
-            <br><br>●  Search for hike
-            <br><br>●  Browse hiking locations,  view trail features, read reviews and  view geotagged photos posted by other users. <br>●  Send and receive messages.
-            <br><br>●  Dashboard - users can view calendar, browse hikes by location, view posts and outings shared by the community.
-             <br><br>● Accept, Decline, Remind about potential outings. <br><br>●  If a user selects “Going”, it will be added to the user’s calendar. <br><br>● Each user will have their own profile, displaying photos and preferences.<br><br>
-            Profiles can be public or private. 
-            <br><br>● Users can list favorite locations and obtain information regarding events in those locations, manage contacts, and follow certain users’ blog entries.
+        <p id="bioBody">●  Create outing(s) public and private and invite others
+            <br><br>●  Browse hiking locations, upcomming community hikes, trail features, reviews and view other user's geotagged photos. <br>●  Send and receive messages.
+            <br><br>●  Dashboard - users can view calendar, Accept, Decline, view Reminders regarding outings. If a user selects “Going”, it will be added to the user’s calendar. 
+            <br><br>●  Each user will have their own profile, displaying photos and preferences. Profiles can be public or private. 
+            <br><br>●  Users can list favorite locations and obtain information regarding events in those locations, manage contacts, and follow certain users’ blog entries.
             <br>
         </p>
 
